--- a/internal/codex/generate/tmpl/dev.Dockerfile.tmpl
+++ b/internal/codex/generate/tmpl/dev.Dockerfile.tmpl
@@ -1,5 +1,5 @@
-{{- if .RootUser }}FROM khulnasoftcom/codex-root-user:latest
-{{- else }}FROM khulnasoftcom/codex:latest
+{{- if .RootUser }}FROM khulnasoft/codex-root-user:latest
+{{- else }}FROM khulnasoft/codex:latest
 {{- end}}
 
 # Installing your codex project
